objects/ASI_CRM_Sales_Team__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Chinese_Name__c</fullName>
        <label>Chinese Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Commercial_Team__c</fullName>
        <label>Commercial Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prestige</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>HQ/Hotel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Division__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Division</label>
        <referenceTo>ASI_CRM_Division__c</referenceTo>
        <relationshipLabel>Sales Teams</relationshipLabel>
        <relationshipName>Sales_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Dummy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dummy?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Inactive_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PO_Prefix__c</fullName>
        <label>PO Prefix</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Region__c</fullName>
        <formula>ASI_CRM_Division__r.ASI_CRM_Region__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sales_Team_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Team Manager</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>startsWith</operation>
                <value>ASI CN</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Is_Sales_Group_Head__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Sales Group Head</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_WS_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_CN_Sales_Reps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Wholesaler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wholesaler(CN)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Wholesaler (CN)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Sales Teams</relationshipLabel>
        <relationshipName>ASI_CRM_CN_Sales_Reps</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Team</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Chinese_Name__c</columns>
        <columns>ASI_CRM_Commercial_Team__c</columns>
        <columns>ASI_CRM_Region__c</columns>
        <columns>ASI_CRM_Division__c</columns>
        <columns>ASI_CRM_PO_Prefix__c</columns>
        <columns>ASI_CRM_Sequence__c</columns>
        <columns>ASI_CRM_Dummy__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_CRM_Commercial_Team__c</field>
            <operation>equals</operation>
            <value>Premium</value>
        </filters>
        <label>All Premium View</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Chinese_Name__c</columns>
        <columns>ASI_CRM_Region__c</columns>
        <columns>ASI_CRM_Division__c</columns>
        <columns>ASI_CRM_Sales_Team_Manager__c</columns>
        <columns>ASI_CRM_PO_Prefix__c</columns>
        <columns>ASI_CRM_Sequence__c</columns>
        <columns>ASI_CRM_Dummy__c</columns>
        <columns>ASI_CRM_External_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_CN_WS_Community</fullName>
        <columns>NAME</columns>
        <columns>ASI_CTY_CN_Wholesaler__c</columns>
        <columns>ASI_CRM_Chinese_Name__c</columns>
        <columns>ASI_CTY_CN_WS_Sales_Rep__c</columns>
        <columns>ASI_CRM_Sequence__c</columns>
        <columns>ASI_CTY_CN_Is_Sales_Group_Head__c</columns>
        <columns>ASI_CRM_External_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Sales_Team__c.ASI_CTY_CN_WS_Sales_Rep</value>
        </filters>
        <label>All CN WS Community</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CN_WS_Sales_Reps</fullName>
        <columns>NAME</columns>
        <columns>ASI_CTY_CN_Wholesaler__c</columns>
        <columns>ASI_CTY_CN_WS_Sales_Rep__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Sales_Team__c.ASI_CTY_CN_WS_Sales_Rep</value>
        </filters>
        <label>CN WS Sales Reps</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_CN_IT_Admin</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Sales Team</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Teams</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Sales_Team</fullName>
        <active>true</active>
        <label>CN Sales Team</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CTY_CN_WS_Sales_Rep</fullName>
        <active>true</active>
        <description>For Wholesaler configuration sales rep</description>
        <label>CN WS Sales Rep</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>